--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
         </div>
 
          <div class="header-phones col-sm-7 col-md-5 col-lg-5">
-           <img src="img/phones.png" class="img-responsive" alt="">
+           <img src="img/phones.png" usemap="navigation" class="img-responsive" alt="">
+           <map name="navigation" id="navigation">
+             <area shape="rect" coords="200,35,428,68" href="mailto:vash@pereezd-bystro.ru?subject=Письмо%20для%20ООО%20Переезд-быстро" alt="адрес электронной почты">
+           </map>
          </div>
       
        </div>
