--- a/cena-pereezda.html
+++ b/cena-pereezda.html
@@ -44,12 +44,15 @@
           <p id="year-2006">c 2006 года!</p>
           <p id="site-span">www.pereezd-bystro.ru</p>
         </div>
-
-         <div class="header-phones col-sm-7 col-md-5 col-lg-5">
-           <img src="img/phones.png" class="img-responsive" alt="">
-         </div>
-      
-       </div>
+<!-- Изображение с номерами телефонов и e-mail с map -->
+        <div class="header-phones col-sm-7 col-md-5 col-lg-5">
+           <img src="img/phones.png" usemap="navigation" class="img-responsive" alt="">
+           <map name="navigation" id="navigation">
+             <area shape="rect" coords="200,35,428,68" href="mailto:vash@pereezd-bystro.ru?subject=Письмо%20для%20ООО%20Переезд-быстро" alt="адрес электронной почты">
+           </map>
+        </div>
+<!-- Конец карты изображений       -->
+      </div><!-- row -->
      </header>
 <nav class="navbar navbar-inverse">
   <div class="container">
