--- a/pereezd-ofisa.html
+++ b/pereezd-ofisa.html
@@ -35,11 +35,15 @@
           <p id="site-span">www.pereezd-bystro.ru</p>
         </div>
 
-         <div class="header-phones col-sm-7 col-md-5 col-lg-5">
-           <img src="img/phones.png" class="img-responsive" alt="">
-         </div>
-      
-       </div>
+         <!-- Изображение с номерами телефонов и e-mail с map -->
+        <div class="header-phones col-sm-7 col-md-5 col-lg-5">
+           <img src="img/phones.png" usemap="navigation" class="img-responsive" alt="">
+           <map name="navigation" id="navigation">
+             <area shape="rect" coords="200,35,428,68" href="mailto:vash@pereezd-bystro.ru?subject=Письмо%20для%20ООО%20Переезд-быстро" alt="адрес электронной почты">
+           </map>
+        </div>
+<!-- Конец карты изображений       -->
+      </div><!-- row -->
      </header>
 
 <nav class="navbar navbar-inverse">
