--- a/kalk.html
+++ b/kalk.html
@@ -467,7 +467,7 @@
           Вы можете оценить и <br> заказать переезд по телефонам:<br><span class="telshrift">(495) 648-41-27</span> <br>и <span class="telshrift">(495) 969-30-84</span>
       </div>
       <div class="block col-xs-5 col-sm-4">
-       Или заказать бесплатный<br> выезд оценщика,  нажав на кнопку:<br><a href="zakaz.html"><button class="btn btn-warning">ОТПРАВИТЬ ЗАЯВКУ</button></a>
+       Или заказать бесплатный<br> выезд оценщика,  нажав на кнопку:<br><a href="contacts.html"><button class="btn btn-warning">ОТПРАВИТЬ ЗАЯВКУ</button></a>
       </div>
     </div> <!-- row -->     
   </div>  <!-- container -->
