--- a/cena-pereezda.html
+++ b/cena-pereezda.html
@@ -280,7 +280,7 @@
           <td class="beluy"><strong>300 руб./час</strong></td>
           </tr>
         <tr>
-          <td class="beluy"><strong>Сборка и разборка мебели </strong><span class="sinuy"><a href="sborka.html" class="darkorange-bold">Подробнее &gt;&gt;</a></span></td>
+          <td class="beluy"><strong>Сборка и разборка мебели </strong><span class="sinuy"><a href="sborka-mebeli.html" class="darkorange-bold">Подробнее &gt;&gt;</a></span></td>
           <td class="cell-cvet"><strong>400 руб./час</strong></td>
           </tr>
         <tr>
