--- a/pereezd-kvartir.html
+++ b/pereezd-kvartir.html
@@ -332,36 +332,29 @@
 <div class="streep">
   <div class="container clearfix">
   
-    <table class="tbl-shagi" cellspacing="0">
-    <tbody>
-      <tr>
-        <td><img src="img/galka.png"></td>
-        <td><p><strong>Контакт с нашим специалистом</strong></p>
-    <p>Позвоните нам по телефону или заполните <a href="contacts.html" class="darkorange-bold">online-заявку</a>. Наш специалист уточнит детали предстоящего переезда и проконсультируе</p>т Вас.</td>
-      </tr>
-      <tr>
-        <td><img src="img/galka.png"></td>
-        <td><p><strong>Выезд оценщика</strong></p>
-    <p>В некоторых случаях требуется выезд специалиста для оценки стоимости переезда. Оценку на месте осуществляет бригадир, который будет осуществлять ваш переезд, что исключает все последующие разногласия. Выезд оценщика осуществляется бесплатно.</p></td>
-      </tr>
-      <tr>
-        <td><img src="img/galka.png"></td>
-        <td><p><strong>Подготовка к переезду</strong></p>
-    <p>При необходимости производится заблаговременная доставка упаковки. При больших объемах за 1 день до переезда можно пригласить специалистов по разборке/сборке и упаковке мебели.</p></td>
-      </tr>
-      <tr>
-        <td><img src="img/galka.png"></td>
-        <td><p><strong>Переезд</strong></p>
+    <ul class="shagi list-unstyled">
+   <li><p><strong>Контакт с нашим специалистом</strong></p>
+      <p>Позвоните нам по телефону или заполните <a href="contacts.html" class="darkorange-bold">online-заявку</a>. Наш специалист уточнит детали предстоящего переезда и проконсультирует Вас.</p>
+   </li>
+    
+    <li><p><strong>Выезд оценщика</strong></p>
+    <p>В некоторых случаях требуется выезд специалиста для оценки стоимости переезда. Оценку на месте осуществляет бригадир, который будет осуществлять ваш переезд, что исключает все последующие разногласия. Выезд оценщика осуществляется бесплатно.</p>
+    </li>
+
+    <li> <p><strong>Подготовка к переезду</strong></p>
+    <p>При необходимости производится заблаговременная доставка упаковки. При больших объемах за 1 день до переезда можно пригласить специалистов по разборке/сборке и упаковке мебели.</p>
+     </li>
+
+    <li><p><strong>Переезд</strong></p>
     <p>В назначенную дату производится переезд в полном объеме. В том числе перевозка, разборка и сборка мебели, упаковка мебели и бытовой техники. При необходимости наши специалисты помогут упаковать в коробки Ваши личные вещи.
-      Срочный переезд можно провести в день заявки.</p></td>
-      </tr>
-      <tr>
-        <td><img src="img/galka.png"></td>
-        <td><p><strong>Окончание переезда</strong></p>
-    <p>По окончании переезда Вы проверяете полноту выполнения и качество произведенных работ. И оплачиваете   стоимость переезда. Мы производим утилизацию использованной упаковки и, при необходимости, утилизацию старой мебели и ненужных вещей.</p></td>
-      </tr>
-    </tbody>
-  </table>
+      Срочный переезд можно провести в день заявки.</p>
+    </li>
+
+    <li></span><p><strong>Окончание переезда</strong></p>
+    <p>По окончании переезда Вы проверяете полноту выполнения и качество произведенных работ. И оплачиваете   стоимость переезда. Мы производим утилизацию использованной упаковки и, при необходимости, утилизацию старой мебели и ненужных вещей.</p>
+    </li>
+    </ul>
+ 
   </div>          
 </div>
 </section>
